# gdiff

./: Cargo.toml  LICENSE
examples/: config.rs  similar.rs
fixtures/: test.yaml
src/: config.rs
