[package]
name = "gdiff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
http-serde = "1.1.2"
reqwest = { version = "0.11.18", default-features = false, features = ["rustls"] }
serde = { version = "1.0.174", features = ["serde_derive", "derive"] }
serde_json = "1.0.103"
serde_yaml = "0.9.25"
similar = { version = "2.2.1", features = ["bytes"] }
tokio = { version = "1.29.1", features = ["full"] }
url = { version = "2.4.0", features = ["serde"] }
